cmake_minimum_required(VERSION 3.22)
project(Bridge_Summer24Week)

set(CMAKE_CXX_STANDARD 14)

add_executable(Bridge_Summer24Week
        "Ethan OH/July6.cpp")

add_executable(July20 "Ethan OH/July20.cpp")
add_executable(July27 "Ethan OH/July27.cpp")
add_executable(Aug3 "Ethan OH/Aug3.cpp")
add_executable(exam1review "Ethan OH/exam1review.cpp")
add_executable(Aug10 "Ethan OH/Aug10.cpp")
add_executable(Aug17 "Ethan OH/Aug17.cpp")
add_executable(Aug24 "Ethan OH/Aug24.cpp")
add_executable(Aug31 "Ethan OH/Aug31.cpp")
add_executable(Sep6 "Ethan OH/Sep6.cpp")
add_executable(Sep13 "Ethan OH/Sep13.cpp")
add_executable(exam2review "Ethan OH/exam2review.cpp")
add_executable(Sep20 "Ethan OH/Sep20.cpp")
add_executable(Sep27 "Ethan OH/Sep27.cpp")
add_executable(Oct4 "Ethan OH/Oct4.cpp")
add_executable(Oct18 "Ethan OH/Oct18.cpp")